# kraken_reboot

control_system_stack/control_system/: CMakeLists.txt  package.xml
control_system_stack/control_system/cfg/: params.cfg
control_system_stack/control_system/cfg/cpp/control_system/: paramsConfig.h
control_system_stack/control_system/docs/: paramsConfig-usage.dox  paramsConfig.dox  paramsConfig.wikidoc
control_system_stack/control_system/include/control_system/: ControlParameters.h  ControlServer.h  StateController.h
control_system_stack/control_system/parameters/: poseParam  poseParam.cp  stop.cp  twistParam
control_system_stack/control_system/src/: ControlParameters.cpp  ControlServer.cpp  PIDTuning.cpp  StateController.cpp  main.cpp
control_system_stack/control_system/src/control_system/cfg/: paramsConfig.py
control_system_stack/keyboard_control/: CMakeLists.txt  package.xml
control_system_stack/keyboard_control/src/: main.py  replicateData.py
control_system_stack/thruster_converter/: CMakeLists.txt  package.xml
control_system_stack/thruster_converter/src/: thruster.cpp  thruster.cpp~
embedded_system_stack/kraken_arduino/: CMakeLists.txt  package.xml
embedded_system_stack/kraken_arduino/firmware/: BATTERY_ARDUINO.cpp  CMakeLists.txt  COMM_THRUSTER.cpp  THRUSTER_ARDUINO.cpp
embedded_system_stack/serial_comm/: CMakeLists.txt  package.xml
embedded_system_stack/serial_comm/src/: main.cpp
kraken_simulator/plugins/include/plugins/: Hydrodynamics.h
kraken_simulator/plugins/src/: KrakenControl.cpp
launchers/: CMakeLists.txt  package.xml
launchers/launch/: SAUVC_Video.launch  localize_kraken.launch  sensors.launch
msgs_stack/kraken_msgs/: CMakeLists.txt  package.xml
msgs_stack/kraken_msgs/action/: advancedController.action
msgs_stack/kraken_msgs/msg/: PIDError.msg  thrusterCmd.msg  thrusterData.msg
navigation_stack/robot_localization/cfg/: robot_localization_visualization.rviz
navigation_stack/robot_localization/launch/: AUV_EKF.launch  localize_kraken.launch
navigation_stack/robot_localization/params/: AUV_EKF_Params.yaml
resources/: CMakeLists.txt  package.xml
resources/include/resources/: topicHeader.h
resources/src/: topicHeader.cpp
resources/src/resources/: topicHeader.py
sensor_stack/dvl/: CMakeLists.txt  package.xml
sensor_stack/dvl/src/: nqDVL.py
sensor_stack/imu/: CMakeLists.txt  package.xml
sensor_stack/imu/src/: sparton.py
vision_reboot_stack/GMM/: CMakeLists.txt  package.xml
vision_reboot_stack/GMM/src/: gmm_r.cpp  kalman_r.cpp  subscriber_r.cpp
vision_reboot_stack/GaussianMixtureModel/: CMakeLists.txt  package.xml
vision_reboot_stack/cam_open/: README.md
vision_reboot_stack/cam_open/image_transport_ws/devel/: .catkin  .rosinstall  setup.sh
vision_reboot_stack/cam_open/image_transport_ws/devel/include/image_transport_tutorial/: ResizedImage.h
vision_reboot_stack/cam_open/image_transport_ws/devel/lib/image_transport_tutorial/: my_publisher  my_subscriber
vision_reboot_stack/cam_open/image_transport_ws/devel/lib/pkgconfig/: image_transport_tutorial.pc  learning_image_transport.pc
vision_reboot_stack/cam_open/image_transport_ws/devel/share/image_transport_tutorial/cmake/: image_transport_tutorial-msg-extras.cmake  image_transport_tutorial-msg-paths.cmake  image_transport_tutorialConfig.cmake
vision_reboot_stack/cam_open/image_transport_ws/devel/share/learning_image_transport/cmake/: learning_image_transportConfig.cmake
vision_reboot_stack/cam_open/image_transport_ws/devel/share/roseus/ros/image_transport_tutorial/: manifest.l
vision_reboot_stack/cam_open/image_transport_ws/src/: image_transport_tutorial
vision_reboot_stack/camera/bottomcam/: CMakeLists.txt  package.xml
vision_reboot_stack/camera/frontcam/: CMakeLists.txt  package.xml
vision_reboot_stack/camera/frontcam/src/: frontcam.cpp
vision_reboot_stack/xeno_kfebt/: README.md
vision_reboot_stack/xeno_kfebt/KF-EBT/: CMakeLists.txt  kfebt.cpp  kfebtracker.cpp  kfebtracker.h  main_cam.cpp  package.xml
vision_reboot_stack/xeno_kfebt/KF-EBT/nbproject/: configurations.xml  project.xml
vision_reboot_stack/xeno_kfebt/KF-EBT/nbproject/private/: Default.properties  configurations.xml  private.xml
vision_reboot_stack/xeno_kfebt/KF-EBT/trackers/: CMakeLists.txt  tasms.cpp  tgmm.cpp  tgmm.h
vision_reboot_stack/xeno_kfebt/KF-EBT/trackers/ASMS/: colotracker.cpp
vision_reboot_stack/xeno_kfebt/KF-EBT/trackers/GMM/: gmm.cpp  gmm.h  gmmold.cpp
