<?xml version="1.0"?>
<package format="2">
  <name>serial_comm</name>
  <version>0.0.0</version>
  <description>The serial_comm package</description>
  <maintainer email="yash@todo.todo">yash</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kraken_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>resources</build_depend>

  <build_export_depend>kraken_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>resources</build_export_depend>

  <exec_depend>kraken_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>resources</exec_depend>

  <export>
  </export>
</package>
